Quick code quality sweep, fix Forge, update to 1.20.